Resolved overflow scrolling issue with mobile navbar

--- a/src/components/mobile-navbar.module.css
+++ b/src/components/mobile-navbar.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 0;
   left: 100%;
+  height: 100vh;
   margin-left: 25%;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
